@startuml

title __USERLOCATION-APP's Class Diagram__\n

  namespace org.scd {
    class org.scd.App {
    }
  }
  

  namespace org.scd {
    namespace config {
      class org.scd.config.AppConfig {
      }
    }
  }
  

  namespace org.scd {
    namespace config {
      class org.scd.config.SecurityConfig {
      }
    }
  }
  

  namespace org.scd {
    namespace config {
      namespace exception {
        class org.scd.config.exception.BusinessException {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace config {
      namespace exception {
        class org.scd.config.exception.ExceptionConfig {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace controller {
      class org.scd.controller.UserController {
      }
    }
  }
  

  namespace org.scd {
    namespace controller {
      class org.scd.controller.UserLocationController {
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      class org.scd.model.User {
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      class org.scd.model.UserLocation {
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace dto {
        class org.scd.model.dto.UserLocationFilterDTO {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace dto {
        class org.scd.model.dto.UserLocationDTO {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace dto {
        class org.scd.model.dto.UserLoginDTO {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace dto {
        class org.scd.model.dto.UserRegisterDTO {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace security {
        class org.scd.model.security.CustomUserDetails {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace model {
      namespace security {
        class org.scd.model.security.Role {
        }
      }
    }
  }
  

  namespace org.scd {
    namespace repository {
      interface org.scd.repository.RoleRepository {
      }
    }
  }
  

  namespace org.scd {
    namespace repository {
      interface org.scd.repository.UserLocationRepository {
      }
    }
  }
  

  namespace org.scd {
    namespace repository {
      interface org.scd.repository.UserRepository {
      }
    }
  }
  

  namespace org.scd {
    namespace service {
      interface org.scd.service.UserLocationService {
      }
    }
  }
  

  namespace org.scd {
    namespace service {
      class org.scd.service.UserLocationServiceImpl {
      }
    }
  }
  

  namespace org.scd {
    namespace service {
      interface org.scd.service.UserService {
      }
    }
  }
  

  namespace org.scd {
    namespace service {
      class org.scd.service.UserServiceImpl {
      }
    }
  }
  

  namespace org.scd {
    namespace service {
      namespace security {
        class org.scd.service.security.CustomUserDetailsServiceImpl {
        }
      }
    }
  }
  

  org.scd.config.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  org.scd.controller.UserController o-- org.scd.service.UserService : userService
  org.scd.controller.UserLocationController o-- org.scd.service.UserLocationServiceImpl : locationServiceImpl
  org.scd.model.User .up.|> java.io.Serializable
  org.scd.model.UserLocation .up.|> java.io.Serializable
  org.scd.model.UserLocation o-- org.scd.model.User : user
  org.scd.model.security.CustomUserDetails .up.|> org.springframework.security.core.userdetails.UserDetails
  org.scd.model.security.CustomUserDetails o-- org.scd.model.User : user
  org.scd.service.UserLocationServiceImpl .up.|> org.scd.service.UserLocationService
  org.scd.service.UserLocationServiceImpl o-- org.scd.repository.UserLocationRepository : locationRepository
  org.scd.service.UserLocationServiceImpl o-- org.scd.repository.UserLocationRepository : userLocationRepository
  org.scd.service.UserLocationServiceImpl o-- org.scd.repository.UserRepository : userRepository
  org.scd.service.UserServiceImpl .up.|> org.scd.service.UserService
  org.scd.service.UserServiceImpl o-- org.scd.repository.RoleRepository : roleRepository
  org.scd.service.UserServiceImpl o-- org.scd.repository.UserRepository : userRepository
  org.scd.service.security.CustomUserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  org.scd.service.security.CustomUserDetailsServiceImpl o-- org.scd.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
